--- a/BulkyWebRazor_Temp/Pages/Privacy.cshtml
+++ b/BulkyWebRazor_Temp/Pages/Privacy.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewData["Title"] = "İrem AKAGÜNDÜZ";
+﻿@page
+@model PrivacyModel
+@{
+    ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
 
